# seing

./: CMakeLists.txt  setup.py
examples/: agc.py
python/: seing4python.cpp
src/: gamma_fe2o3.xyz  makefile
src/AgniCal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agnicalculato.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agnicalculator/: seing_agnicalculator.cpp
